# foundations_course

./: .gitignore  README.md
Resources/Git/: git.md
Resources/Python/: Experiment with python.ipynb
content/calculus/: README.md
content/cpp/: README.md
content/git/: README.md
content/intro_to_programming/: README.md
content/introduction/: WS_2024_Intorduction.pptx  public-speaking.tex  public_speaking.md  robotics.md  scientific_writing.md
content/java/: README.md
content/latex/: Intro_to_latex.tex  introduction.md
content/linear_algebra/: README.md
content/math/: calculus.md  linear_algebra.md  probability.md  python_for_linear_algebra_exercises.ipynb  python_for_linear_algebra_sample_solutions.ipynb  python_for_linera_algebra_Q.ipynb
content/probability/: README.md
content/programming/: cpp.md  introduction.md  java.md  python.md
content/python/: WS_2024_Python_Intro_Presentation.pptx  WS_2024_numpy.ipynb  python_2_basics.ipynb  python_3_basics.ipynb  python_basics.ipynb  python_for_calculus.ipynb  python_for_linear_algebra_and_basics_of_numpy.ipynb  python_for_markdown.ipynb
content/ros/: README.md  basics.md  commands.md  concepts.md  introduction.md  patterns.md
content/ros2/: README.md
content/ros2/cpp_py_test/: CMakeLists.txt  package.xml
content/ros2/cpp_py_test/scripts/: py_node.py
content/ros_amr/: README.md
materials/: Numpy_practice (1).ipynb  Numpy_practice.ipynb  Prerequisites for Diving (C++ Sessions).md  Prerequisites for Diving (ROS Sessions).md  Python - Introduction to Datastructures.ipynb  linear-algebra-programming.ipynb
(+236 files in other folders)
